@@ -43,6 +43,75 @@ defmodule Chunky.Math do
   def prime_factors(1), do: [1]
   def prime_factors(n) when is_integer(n) and n > 1, do: decomposition(n, 2, [1])
 
+  @doc """
+  Factorize an integer into all divisors.
+  
+  This will find all divisors, prime and composite, of an integer. The algorithm used
+  for factorization is not optimal for very large numbers, as it uses a multiple pass
+  calculation for co-factors and composite factors.
+  
+  
+  ## Example
+  
+      iex> Math.factors(2)
+      [1, 2]
+  
+      iex> Math.factors(84)
+      [1, 2, 3, 4, 6, 7, 12, 14, 21, 28, 42, 84]
+  
+      iex> Math.factors(123456)
+      [1, 2, 3, 4, 6, 8, 12, 16, 24, 32, 48, 64, 96, 192, 643, 1286, 1929, 2572, 3858, 5144, 7716, 10288, 15432, 20576, 30864, 41152, 61728, 123456]
+  
+  """
+  def factors(n) when is_integer(n) and n > 0 do
+      
+      # start with prime factors
+      pf = prime_factors(n)
+      |> Enum.uniq()
+      
+      # get complements from primes
+      cf = pf
+      |> Enum.map(fn p_factor -> div(n, p_factor) end)
+      |> Enum.uniq()
+      
+      # run powers of primes up to sqrt(n)
+      pf_powers = power_factors_up_to(pf, n)
+      
+      # check each of the pf powers as a factor to build other factors
+      of = pf_powers
+      |> Enum.filter(fn pf_power -> rem(n, pf_power) == 0 end)
+      |> Enum.map(fn pf_power -> [div(n, pf_power), pf_power] end)
+      |> List.flatten()
+      
+      pf ++ cf ++ of |> Enum.uniq() |> Enum.sort()
+  end
+  
+  # given a list of factors of N, and N, build a list of the powers of each integer
+  # in factor_list up to sqrt(N)
+  defp power_factors_up_to(factor_list, n) when is_list(factor_list) and is_integer(n) do
+      
+     # find our max value
+     up_to_ceil = :math.sqrt(n) |> Float.ceil() |> Kernel.trunc()
+     
+     factor_list
+     |> Enum.map(fn factor -> power_factor_up_to(factor, 2, up_to_ceil) end )
+     |> List.flatten()
+     
+  end
+  
+  # build powers of `base` up to `up_to_ceil`
+  defp power_factor_up_to(1, _f, _u), do: []
+  defp power_factor_up_to(base, factor, up_to_ceil) do
+      # v = :math.pow(base, factor) |> Kernel.trunc()
+      v = base * factor
+      
+      if v > up_to_ceil do
+          []
+      else
+          [v] ++ power_factor_up_to(base, factor + 1, up_to_ceil)
+      end
+  end
+  
   #
   # prime decomposition via trial division Adapted from Rosetta Code
   #   http://rosettacode.org/wiki/Prime_decomposition#Elixir
@@ -51,6 +120,28 @@ defmodule Chunky.Math do
   defp decomposition(n, k, acc) when rem(n, k) == 0, do: decomposition(div(n, k), k, [k | acc])
   defp decomposition(n, k, acc), do: decomposition(n, k + 1, acc)
 
+  @doc """
+  Calculate the sum-of-divisors (or sigma-1, `σ1(n)`) of an integer.
+  
+  This is all of the divisors of `n` summed.
+  
+  ## Example
+  
+      iex> Math.sigma(70)
+      144
+    
+      iex> Math.sigma(408)
+      1080
+  
+      iex> Math.sigma(100000)
+      246078
+  
+  """
+  def sigma(n) when is_integer(n) and n > 0 do
+      factors(n)
+      |> Enum.sum()
+  end
+  
   @doc """
   Determine if a positive integer is prime.
 
