@@ -19,12 +19,15 @@
 
 ### Enhancements
 
- - Chunk.Sequence
+ - Chunky.Sequence
   - sequences are now marked as finite or infinite (as computable/stored in Squence library)
   - sequences can now have initial index/offset other than 0 (like A000593)
   - New Functions:
    - `is_finite?/1` - Is a sequence finite or infinite is sequence library?
-
+ - Chunky.Math
+  - `factors/1` - All divisors of N
+  - `sigma/1` - Sigma function of factors of N
+  
 ### New Sequences
 
  - A000593 - Sum of Odd Divisors of N
